# my-openenv

./: Dockerfile  LICENSE  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  utils.py
data/: rainfall_flood_dataset.csv
server/: app.py  env.py  grader.py  main.py  models.py  tasks.py
